# 20260301-tasklist-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  agent-cli.py  agent-mailmaster.py  agent-taskmaster.py  agent.py  agent_langgraph_taskmaster.py  agent_mailmaster.py  agent_taskmaster.py  check-mongo-connection.py  cleanup.sh  cli.py  deploy.sh  extract_conversations.py  fetch-logs.sh  get-all-gemini-models-list.sh  langgraph.json  list-sprints.py  main.py  pyproject.toml  requirements.txt  slack_taskmaster_server.py  system_message.md  system_message_mail.md  system_message_taskmaster.jinja.md  system_message_taskmaster.md  update_system_message.py  utils.py
.claude/: hook-save-reply.py  settings.json  statusline.py
.logs/: .gitignore
docs/: langgraph-firestore.md  uv-docker.md
